# GnawTreeWriter

./: .gitignore  .gnawtreewriter-tags.toml  .gnawtreewriter_session.json  .gnawtreewriter_session_id  ADDON_ARCHITECTURE_PROPOSAL.md  AGENTS.md  AGENT_GUIDELINES_TEMPLATE.md  AI_AGENT_TEST_SCENARIOS.md  ALF.md  BATCH_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  CRUSH_INTEGRATION_GUIDE.md  Cargo.toml  GNAW_ARCHITECT_SKILL.md  GTW_INSTRUCTIONS.md  INSTALLATION_ISSUE.md  ISSUE_BODY.md  KNOWN_ISSUES.md  LANGUAGE_SUPPORT_PLAN.md  LICENSE-MIT  LICENSE_COMPARISON.md  LICENSE_COPYLEFT_ANALYSIS.md  LICENSE_RETROACTIVE_CHANGE.md  MPL-2.0-GUIDE.md  Makefile  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.3.md  RELEASE_NOTES_v0.3.4.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_PROCESS.md  REPO_STRATEGY_DISCUSSION.md  ROADMAP.md  SKILL.md  TCARV_1_0.md  TCARV_ADDON_AUTO.md  Zed-history1.md  color_test.rs  (+20 more)
.github/: copilot-instructions.md
.github/instructions/: gnawtreewriter-edit.instructions.md
.github/workflows/: mcp-examples.yml  test-ai.yml  validate.yml
GnawTreeWriter_docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  LLM_INTEGRATION.md  README.md  RECIPES.md  ROADMAP.md
docs/: BACKUP_SYSTEM_FEEDBACK.md  EDITOR_INTEGRATION.md  GNAWSENSE_SPEC.md  GNAWTREEWRITER_EXTENSIONS.md  HRM_VISION.md  LAZY_GUIDE.md  MCP.md  RECIPES.md  TAG_FEATURES.md  ZED_SNIPPET.md
docs/releases/: v0.6.0.md  v0.6.1.md
docs/vision/: VISION_AND_ROADMAP_ANALYSIS.md
examples/: HelloWorld.java  HelloWorld.java.bak  README.md  complex_test.qml  debug_loading.rs  demo.py  example.c  example.cpp  example.html  example.qml  example.rs  example.sh  example.ts  hello.c  hello.cpp  hello.sh  hello.zig  mcp_client.rs  node_mcp_client.js  python_complex.py  python_mcp_client.py  qml_complex.qml  typescript_complex.ts
examples/temporal-demo/: DEVELOPMENT_LOG.md  notes.py  restore_demo.sh
examples/zed-extension-gnaw/: Cargo.toml  README.md  build-dist.sh  extension.toml
examples/zed-extension-gnaw/scripts/: mcp-serve.sh
examples/zed-extension-gnaw/src/: lib.rs
extensions/gemini/: GEMINI.md  README.md  gemini-extension.json  run_mcp.sh
extensions/vscode/: .vscodeignore  README.md  package.json
extensions/vscode/src/: extension.js
extensions/zed/: .gitignore  Cargo.toml  README.md  build-dist.sh  extension.toml  extension.wasm
extensions/zed/scripts/: mcp-stop.sh  zed-commands.json
extensions/zed/src/: lib.rs
gemini-extension/: README.md
hrm_test/: logic.rs  main.rs
scripts/: check-license.sh  mcp-client.sh  mcp-serve.sh  test-mcp.sh
src/: auth_demo.rs  cli.rs  cli.rs.bak  lib.rs  main.rs  network.rs
src/core/: alf.rs  anchor.rs  backup.rs  batch.rs  blast.rs  blueprint.rs  diagnostics.rs  diff_parser.rs  gnaw_diff.rs  gnaw_find.rs  gnaw_graph.rs  gnaw_refactor.rs  guardian.rs  healer.rs  inspect.rs  label_manager.rs  macro_dispatcher.rs  mod.rs  refactor.rs  report.rs  restoration_engine.rs  scaffold.rs  tag_manager.rs  transaction_log.rs  undo_redo.rs  visualizer.rs  visualizer_test.rs
src/llm/: ai_manager.rs  batch.rs  gnaw_sense.rs  impact_analyzer.rs  llm.rs  llm_integration.rs  mod.rs  project_indexer.rs  relational_index.rs  semantic_index.rs
src/mcp/: mod.rs
src/parser/: bash.rs  c.rs  cpp.rs  csharp.rs  css.rs  dart.rs  error.rs  generic.rs  go.rs  html.rs  java.rs  javascript.rs  json.rs  kotlin.rs  markdown.rs  mod.rs  php.rs  python.rs  qml.rs  qml_tree_sitter.rs  rust.rs  slint.rs  sql.rs  svelte.rs  swift.rs  text.rs  toml.rs  typescript.rs  xml.rs  yaml.rs  zig.rs
test_dir/: .gnawtreewriter_session.json  file1.md  file2.css  fix_list_nodes.rs  fix_search.rs  fix_skeleton_final.rs  test_a.txt  test_b.txt
tests/: ai_modernbert_tests.rs  gnaw_sense_integration.rs  insert_position.rs  mcp_integration.rs  relational_integration.rs
