[package]
name = "gnawtreewriter"
version = "0.7.3"
edition = "2021"
authors = ["gnaw Software"]
description = "Tree-based code editor for LLM-assisted editing"
repository = "https://github.com/gnawSoftware/GnawTreeWriter"
license = "MPL-2.0"
readme = "README.md"
keywords = ["code-editor", "tree-sitter", "AST", "LLM", "code-generation"]
categories = ["development-tools", "parser-implementations"]

[[bin]]
name = "gnawtreewriter"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.26.3"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-php = "0.24.2"
tree-sitter-html = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-bash = "0.25.1"
tree-sitter-java = "0.23.5"
tree-sitter-zig = "1.1.2"

serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
similar = { version = "2.5", features = ["inline"] }
tree-sitter-javascript = "0.25.0"
tree-sitter-qmljs = "0.3.0"
tree-sitter-language = "0.1"
toml = "0.8"
serde_yaml = "0.9"
pulldown-cmark = "0.13"
chrono = { version = "0.4", features = ["serde"] }
xmltree = "0.12"
serde_json = "1.0"  # ← Bara denna!

# AI dependencies (optional)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.3", optional = true }
tokenizers = { version = "0.21", optional = true }

# MCP server dependencies (optional)
hyper = { version = "1.0", optional = true }
axum = { version = "0.7", optional = true }
tokio-stream = { version = "0.1", optional = true, features = ["net"] }
tower-http = { version = "0.3", optional = true, features = ["add-extension"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[features]
default = []
modernbert = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]
mcp = ["dep:reqwest", "hyper", "axum", "tokio-stream", "tower-http"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
all = ["modernbert", "mcp", "cuda", "metal"]

# tree-sitter-xml = "0.7"  # Using custom parser to avoid version conflicts
# tree-sitter-css = "0.25"  # Using custom parser to avoid version conflicts
# tree-sitter-json = "0.23"  # Using serde_json instead of tree-sitter-json to avoid version conflicts
